@startuml

    skinparam classAttributeIconSize 0

    namespace ch.tofind.commusica.media {

        interface IPlaylist {
            {abstract} +addTrack(Track): boolean
            {abstract} +contains(Track): boolean
            {abstract} +getPlaylistTrack(Track): PlaylistTrack
            {abstract} +getTracksList(): List<PlaylistTrack>
            {abstract} +isSaved(): boolean
        }

        class SavedPlaylist {
            -id: Integer
            -name: String
            -dateAdded: Date
            -datePlayed: Date
            -version: Integer
            +update(): void
        }

        class EphemeralPlaylist {
            {static} -LOG: Logger
            -tracksList: ObservableSortedPlaylistTrackList
            +EphemeralPlaylist(String)
            +downvoteTrack(Track): boolean
            +upvoteTrack(Track): boolean
            +save(): void
            +saveTrack(Track): void
            +setName(String): void
            -retrieveDbTracks(): List<Track>
        }

        class Track {
            -id: String
            -title: String
            -artist: String
            -album: String
            -length: Integer
            -uri: String
            -dateAdded: Date
            -datePlayed: Date
            -favoritedProperty: BooleanProperty
            -version: Integer
            +update(): void
        }

        class Player {
            {static} -LOG: Logger
            {static} -currentPlayer: Player
            -player: MediaPlayer
            -currentTimeProperty: IntegerProperty
            -currentTrackProperty: PlaylistTrackProperty
            -previousTrackProperty: PlaylistTrackProperty
            -volumeStep: double
            -isPlayingProperty: BooleanProperty
            -volumeProperty: DoubleProperty
            -MIN_VOLUME: double
            -MAX_VOLUME: double
            -Player(double)
            {static} +getCurrentPlayer(): Player
            +load(): void
            +isPlaying(): boolean
            +play(): void
            +pause(): void
            +stop(): void
            +riseVolume(): void
            +lowerVolume(): void
        }

        interface java.io.Serializable
        java.io.Serializable <|.. SavedPlaylist

        IPlaylist <|.. SavedPlaylist

        IPlaylist <|.. EphemeralPlaylist

        java.io.Serializable <|.. Track

        EphemeralPlaylist --> "*" Track: dbTracks

        EphemeralPlaylist --> SavedPlaylist: delegate

        Player --> Track: currentTrack

    }

@enduml
